<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001219">

    <ImageView
        android:id="@+id/moodMasks"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:paddingLeft="10dp"
        android:paddingTop="135dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mood_masks"
        android:translationX="35dp" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/moodMasks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/itim_regular"
        android:text="Welcome Back!"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_alignStart="@id/etEmail"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/itim_regular"
        android:text="Sign In"
        android:textColor="@color/textColor"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/textColor"
        android:fontFamily="@font/itim_regular"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#001219"
        android:textSize="16sp"
        app:hintTextColor="#001219" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/textColor"
        android:fontFamily="@font/itim_regular"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#001219"
        android:textSize="16sp"
        app:hintTextColor="#001219" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/textColor"
        android:elevation="4dp"
        android:fontFamily="@font/itim_regular"
        android:text="Log In"
        android:textColor="#001219"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/itim_regular"
        android:text="Don't have an account?"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tvSignUpPrompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/textColor"
        android:elevation="4dp"
        android:fontFamily="@font/itim_regular"
        android:text="Sign Up"
        android:textColor="#001219"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>





